--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: rohlik
       POSTGRES_USER: rohlik
-      POSTGRES_PASSWORD: rohlik
+      POSTGRES_PASSWORD: %|T28t1)DMq1
     ports:
       - "5432:5432"
   redis:
